--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
   "scripts": {
     "start:mongo": "docker-compose -f ./docker/docker-compose.yml up -d",
     "stop:mongo": "docker-compose -f ./docker/docker-compose.yml down",
-    "predev": "start \"React Server\" powershell -noexit npm run start",
     "dev": "electron .",
     "dist": "electron-builder",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "\n==========LIFECYCLE HOOKS============": "",
+    "predev": "start \"React Server\" powershell -noexit npm run start"
   },
   "eslintConfig": {
     "extends": [
